tests/negative/lexical/invalid_hex_prefix/input.ci
void main() {
    print(toString(0x) + "\n");
}
